--- a/default-style.css
+++ b/default-style.css
@@ -93,8 +93,8 @@ hr {
 /* Inheritance Page */
 
 #diagram{
-		  text-align: center;
-		}
+	text-align: center;
+	}
 
 /* About Page */
 
@@ -119,7 +119,8 @@ hr {
 	width: 70%;
   	margin: 10px;
 }
-		
+
+
 #mark{
 	font-size: 50px;
 }
@@ -127,10 +128,27 @@ hr {
 /* Contact Page */
 
 textarea{
-	text-aligh:center;
+	text-align:center;
 }
 		
 input{
 	text-align: center;
 }
-		
+
+/* Protected Page */
+
+img{
+	width: 60%;
+	height: auto;
+}
+
+
+.photo{
+	overflow: auto;	
+	text-align:center;
+}
+
+
+
+
+
