Sixth commit. Added a new blog post (3). Updated some of the other pages.

--- a/default-style.css
+++ b/default-style.css
@@ -1,5 +1,5 @@
 
-/* The default style for theavgprogrammer */
+/* The default style for theAverageProgrammer */
 
 body {
 	line-height:150%;
@@ -98,7 +98,7 @@ hr {
 
 /* About Page */
 
-.innerbox{
+.innerbox {
 	float: left;
 	padding-top: 20px;
 	margin-top: 15px;
